tests/negative/gold/not_test.gold
tests/negative/not_test.toit:7:7: error: 'not' must be parenthesized when used at this location
  foo not 499
      ^~~
Compilation failed.
